# opentelemetry-rust

./: Cargo.toml  demo_code.rs
.github/workflows/: audit-check.yml  ci.yml
examples/logs-batch/: README.md
examples/logs-batch/src/: main.rs
examples/metrics-basic/src/: main.rs
examples/tracing-http-propagator/: Cargo.toml
opentelemetry/: CHANGELOG.md  Cargo.toml
opentelemetry-api/src/global/: logs.rs
opentelemetry-api/src/logs/: logger.rs  mod.rs  noop.rs  record.rs
opentelemetry-appender-log/: CHANGELOG.md
opentelemetry-appender-log/src/: lib.rs
opentelemetry-appender-tracing/: CHANGELOG.md  Cargo.toml
opentelemetry-appender-tracing/benches/: logs.rs
opentelemetry-appender-tracing/examples/: basic.rs
opentelemetry-appender-tracing/src/: layer.rs
opentelemetry-http/: CHANGELOG.md  Cargo.toml
opentelemetry-http/src/: lib.rs
opentelemetry-jaeger-propagator/: CHANGELOG.md
opentelemetry-otlp/: CHANGELOG.md  Cargo.toml
opentelemetry-otlp/examples/basic-otlp/: Cargo.toml
opentelemetry-otlp/examples/basic-otlp-http/: Cargo.toml  docker-compose.yaml  otel-collector-config.yaml
opentelemetry-otlp/src/: lib.rs  logs.rs  span.rs
opentelemetry-otlp/src/exporter/http/: logs.rs  (+2 more)
opentelemetry-otlp/tests/integration_test/: Cargo.toml  otel-collector-config.yaml  tail_container_logs.sh
opentelemetry-otlp/tests/integration_test/cert/: ca_csr.json  client_csr.json  garbage.pem  generate_cert.sh  server_csr.json
opentelemetry-otlp/tests/integration_test/src/: lib.rs  test_utils.rs
opentelemetry-otlp/tests/integration_test/tests/: integration_tests.rs  logs.rs  traces.rs
opentelemetry-prometheus/: CHANGELOG.md  Cargo.toml
opentelemetry-proto/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-proto/src/: lib.rs  proto.rs
opentelemetry-proto/src/transform/: common.rs  logs.rs  metrics.rs  trace.rs  tracez.rs
opentelemetry-proto/tests/: json_serde.rs
opentelemetry-sdk/: CHANGELOG.md  Cargo.toml
opentelemetry-sdk/benches/: context.rs  log.rs  log_exporter.rs  span_builder.rs
opentelemetry-sdk/src/: circularbuffer.rs  lib.rs  runtime.rs  thread_runtime.rs
opentelemetry-sdk/src/export/: trace.rs
opentelemetry-sdk/src/logs/: config.rs  error.rs  log_emitter.rs  log_limits.rs  log_processor.rs  logger.rs  mod.rs  record.rs
opentelemetry-sdk/src/metrics/: instrument.rs  meter.rs  meter_provider.rs  mod.rs
opentelemetry-sdk/src/trace/: export.rs  in_memory_exporter.rs  mod.rs  provider.rs  span.rs  span_processor.rs  span_processor_with_async_runtime.rs  tracer.rs
opentelemetry-semantic-conventions/: CHANGELOG.md
opentelemetry-semantic-conventions/scripts/: generate-consts-from-spec.sh
opentelemetry-semantic-conventions/src/: attribute.rs  lib.rs  metric.rs  resource.rs  trace.rs
opentelemetry-stdout/: CHANGELOG.md  Cargo.toml
opentelemetry-stdout/src/: common.rs
opentelemetry-stdout/src/logs/: transform.rs
opentelemetry-stdout/src/metrics/: transform.rs
opentelemetry-stdout/src/trace/: exporter.rs  transform.rs
opentelemetry-tokio-logging/: Cargo.toml
opentelemetry-tokio-logging/examples/: basic.rs
opentelemetry-tokio-logging/src/: layer.rs  lib.rs  logs.rs
opentelemetry-user-events-logs/: Cargo.toml
opentelemetry-user-events-logs/examples/: README.md  basic.rs
opentelemetry-user-events-logs/src/logs/: exporter.rs
opentelemetry-userevents-exporter/: Cargo.toml
opentelemetry-userevents-exporter-log/src/: exporter.rs  exporter_traits.rs  lib.rs  realtime_logprocessor.rs
opentelemetry-userevents-exporter/src/: builder.rs  exporter_traits.rs  lib.rs  user_events.rs
opentelemetry-userevents-exporter/src/logs/: builder.rs  exporter.rs  mod.rs  realtime_logprocessor.rs
opentelemetry-zipkin/: CHANGELOG.md  Cargo.toml
opentelemetry-zipkin/src/exporter/: mod.rs
opentelemetry/src/: common.rs
opentelemetry/src/global/: error_handler.rs  metrics.rs  mod.rs
opentelemetry/src/logs/: logger.rs  mod.rs  noop.rs  record.rs  stringvalue.rs
opentelemetry/src/metrics/: meter.rs  noop.rs
opentelemetry/src/trace/: context.rs
scripts/: msrv_config.json  patch_dependencies.sh  setup_cfssl.sh  update_versions.sh
stress/: Cargo.toml
stress/src/: logs.rs  throughput.rs
(+12 files in other folders)
