[package]
name = "opentelemetry-tokio-logging"
version = "0.1.0"
description = "Tokio tracing subscriber for OpenTelemetry Logging"
homepage = "https://github.com/open-telemetry/opentelemetry-rust"
repository = "https://github.com/open-telemetry/opentelemetry-rust"
keywords = ["opentelemetry", "logging", "tokio"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
opentelemetry_api = { version = "0.19", path = "../opentelemetry-api", features = ["logs"] }
opentelemetry_sdk = { version = "0.19", path = "../opentelemetry-sdk", features = ["logs"] }
tracing = { version = "0.1.35", default-features = false, features = ["std"] }
tracing-core = "0.1.28"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["registry", "std"] }
once_cell = "1.13.0"






