[package]
name = "integration_test_runner"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
once_cell = { workspace = true }
opentelemetry = { path = "../../../opentelemetry", features = ["metrics", "logs"] }
opentelemetry_sdk = { path = "../../../opentelemetry-sdk", features = ["rt-tokio", "logs", "testing"] }
opentelemetry-proto = { path = "../../../opentelemetry-proto", features = ["gen-tonic-messages", "trace", "logs", "with-serde"] }
opentelemetry-http = {path = "../../../opentelemetry-http", features = ["reqwest"]}
log = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
testcontainers = "0.15.0"
lazy_static = "1.4"

[target.'cfg(unix)'.dependencies]
opentelemetry-appender-log = { path = "../../../opentelemetry-appender-log", default-features = false}
opentelemetry-otlp = { path = "../../../opentelemetry-otlp", features = ["grpc-tonic", "metrics", "logs", "http-proto", "http-json", "reqwest-client"] }
opentelemetry-semantic-conventions = { path = "../../../opentelemetry-semantic-conventions" }