[package]
name = "integration_test_runner"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
opentelemetry = { path = "../../../opentelemetry", features = ["metrics", "logs"] }
opentelemetry_sdk = { path = "../../../opentelemetry-sdk", features = ["rt-tokio", "logs", "testing"] }
opentelemetry-proto = { path = "../../../opentelemetry-proto", features = ["gen-tonic-messages", "trace", "logs", "with-serde"] }
log = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
testcontainers = "0.15.0"

[target.'cfg(unix)'.dependencies]
opentelemetry-appender-log = { path = "../../../opentelemetry-appender-log", default-features = false}
opentelemetry-otlp = { path = "../../../opentelemetry-otlp", optional = true, default-features = false,  features = ["logs", "trace", "metrics"]}
opentelemetry-semantic-conventions = { path = "../../../opentelemetry-semantic-conventions" }

[features]
default = ["tonic-client"]
hyper-client = ["opentelemetry-otlp/hyper-client", "opentelemetry-otlp/http-proto"]
tonic-client = ["opentelemetry-otlp/grpc-tonic"]
reqwest-client = ["opentelemetry-otlp/reqwest-client", "opentelemetry-otlp/http-proto"]
